[package]
name = "book_shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket ={ version = "0.5.0-rc.3", featuers = ["json"]}
async-graphql = { version = "6.0.7", features = ["bson", "chrono"] }
async-graphql-rocket = "6.0.7"
serde = "1.0.188"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["sync"]